fixed button in m menu, overflow hid for m request

--- a/react/src/components/Drawer/Drawer.module.scss
+++ b/react/src/components/Drawer/Drawer.module.scss
@@ -71,6 +71,7 @@
   }
   
   .drawer {
+    overflow-y: hidden !important;
     padding: 0;
     align-items: center;
     display: flex;
